/*
 * xnat-openid-auth-plugin: build.gradle
 *
 */

buildscript {
    ext {
        vXnat = "1.10.1-SNAPSHOT"
    }
}

plugins {
    id "application"
    id "eclipse"
    id "idea"
    id "jacoco"
    id "java"
    id "maven-publish"
    id "com.dorongold.task-tree" version "1.5"
    id "com.palantir.git-version" version "4.3.0"
    id "io.franzbecker.gradle-lombok" version "5.0.0"
    id "io.spring.dependency-management" version "1.1.7"
    id "org.nrg.xnat.build.xnat-data-builder" version "${vXnat}"
}

group = "au.edu.qcif.xnat.openid"
version "1.6.0-SNAPSHOT"
description = "XNAT OpenID Authentication Provider"

repositories {
    mavenLocal()
    maven { url = "https://nrgxnat.jfrog.io/nrgxnat/libs-release" }
    maven { url = "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot" }
    mavenCentral()
}

configurations {
    implementation.extendsFrom(implementAndInclude)

    all {
        exclude group: "log4j"
        exclude group: "net.logstash.logback"
        exclude group: "org.nrg", module: "pipelineBase"
        exclude group: "org.nrg", module: "pipelineBuild"
        exclude group: "org.nrg", module: "pipelineWorkflow"
        exclude group: "org.nrg", module: "pipelineXNAT"
        exclude group: "org.nrg.xnat.pipeline"
        exclude group: "org.slf4j", module: "jcl-over-slf4j"
        exclude group: "org.slf4j", module: "jul-to-slf4j"
        exclude group: "org.slf4j", module: "slf4j-simple"
    }
}

dependencyManagement {
    imports {
        mavenBom "org.nrg:parent:${vXnat}"
    }
    generatedPomCustomization {
        enabled = false
    }
}

dependencies {
    implementation platform("org.nrg:parent:${vXnat}")

    implementation "org.nrg.xnat:web"
    implementation "org.nrg:prefs"
    implementation "org.nrg:framework"
    implementation "org.springframework:spring-web"
    implementation "org.springframework.security:spring-security-config"
    implementation "org.springframework.security:spring-security-web"
    implementation "org.springframework.security.oauth:spring-security-oauth2"
    implementation "org.springframework.security:spring-security-jwt"
    implementation "org.apache.commons:commons-lang3"
    implementation "commons-io:commons-io"
    implementation "org.slf4j:slf4j-api"
    implementation("turbine:turbine") {
        exclude group: "commons-dbcp"
        exclude group: "commons-email"
        exclude group: "commons-pool"
        exclude group: "fulcrum"
        exclude group: "javax.activation", module: "activation"
        exclude group: "javax.mail"
        exclude group: "javax.servlet"
        exclude group: "jython"
        exclude group: "xalan"
        exclude group: "xml-apis"
        exclude group: "log4j", module: "log4j"
        exclude group: "berkeleydb"
        exclude group: "javax.sql"
        exclude group: "jndi"
        exclude group: "mysql"
        exclude group: "tomcat"
        exclude group: "xerces"
        exclude group: "velocity", module: "texen"
        exclude group: "jamon", module: "jamon"
    }
    compileOnly("org.apache.velocity:velocity") { transitive = false }
    compileOnly "javax.servlet:javax.servlet-api"
    implementAndInclude("com.nimbusds:nimbus-jose-jwt:9.37.3")
    testImplementation "junit:junit"
    testImplementation "org.springframework:spring-test"
    testImplementation "com.github.tomakehurst:wiremock"
    testImplementation "org.mockito:mockito-core"
    testCompileOnly "javax.servlet:javax.servlet-api"
    // Mockito ByteBuddy needs servlet-api at test runtime to introspect XnatAppInfo / xdat classes (see CHECKLIST §5.3)
    testRuntimeOnly "javax.servlet:javax.servlet-api"
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    withSourcesJar()
    withJavadocJar()
}

compileJava {
    options.fork = false
}

jacoco {
    toolVersion = "0.8.12"
}

jacocoTestReport {
    reports {
        xml.required = false
        csv.required = false
        html.required = true
    }
}

// Pulls in the Jenkins BUILD_NUMBER environment variable if available.
def buildDate = new Date()
def buildNumber = System.getenv().BUILD_NUMBER?.toInteger() ?: "Manual"
def isDirty, branchName, gitHash, gitHashFull, commitDistance, lastTag, isCleanTag

try {
    def gitDetails = versionDetails()
    isDirty = gitVersion().endsWith ".dirty"
    branchName = gitDetails.branchName ?: "Unknown"
    gitHash = gitDetails.gitHash
    gitHashFull = gitDetails.gitHashFull
    commitDistance = gitDetails.commitDistance
    lastTag = gitDetails.lastTag
    isCleanTag = gitDetails.isCleanTag
} catch (IllegalArgumentException e) {
    logger.info "Got an error trying to read VCS metadata from git. It's possible this project is not under VCS control. Using placeholder values for manifest entries."
    isDirty = true
    branchName = "Unknown"
    gitHash = "None"
    gitHashFull = "None"
    commitDistance = 0
    lastTag = "None"
    isCleanTag = false
}

logger.info """
Building artifacts with manifest attributes:

 * Build-Date:              ${buildDate}
 * Build-Number:            ${buildNumber}
 * Implementation-Version:  ${version}
 * Implementation-Sha-Full: ${gitHashFull}
 * Implementation-Sha:      ${gitHash}
 * Implementation-Commit:   ${commitDistance}
 * Implementation-LastTag:  ${lastTag}
 * Implementation-Branch:   ${branchName}
 * Implementation-CleanTag: ${isCleanTag}
 * Implementation-Dirty:    ${isDirty}
"""

task xnatPluginJar(type: Jar) {
    zip64 = true
    archiveClassifier.set "xpl"
    // files and folders with "-dev" or "--xx" in their name
    // will not be in the compiled jar
    exclude "**/resources/**/*-dev**"
    exclude "**/resources/**/*--xx**"
    from {
        configurations.implementAndInclude.collect { it.isDirectory() ? it : zipTree(it) }
    } {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }
    with jar
}

lombok {
    version = "1.18.34"
    sha256 = "1ea5ad6c6afcff902d75072b2aaa6695585aebee9f12127e15c0036ba95d2918"
}

tasks.withType(Jar).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes "Application-Name": project.description,
                "Build-Date": buildDate,
                "Build-Number": buildNumber,
                "Implementation-Version": project.version,
                "Implementation-Sha": gitHash,
                "Implementation-Sha-Full": gitHashFull,
                "Implementation-Commit": commitDistance,
                "Implementation-LastTag": lastTag,
                "Implementation-Branch": branchName,
                "Implementation-CleanTag": isCleanTag,
                "Implementation-Dirty": isDirty
    }
}

sourceSets {
    main {
        java {
            srcDir "build/xnat-generated/src/main/java"
        }
        resources {
            srcDir "build/xnat-generated/src/main/resources"
        }
    }
}

test {
    useJUnit()
    maxHeapSize = "1G"

    testLogging {
        // Log each test as it passes/skips/fails so CI shows live progress
        // instead of going silent until the build finishes.
        events "passed", "skipped", "failed"
        // Forward the tests' own System.out/System.err to the build output.
        showStandardStreams = true
        // Print full stack traces (with causes) for failures.
        exceptionFormat = "full"
        showExceptions = true
        showCauses = true
        showStackTraces = true
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            artifacts {
                artifact xnatPluginJar
            }

            pom.withXml {
                def root = asNode()
                root.appendNode("name", project.description)
                root.appendNode("url", "https://github.com/nrgxnat/xnat-openid-auth-plugin")
                root.appendNode("inceptionYear", "2017")

                root.appendNode("scm").with {
                    appendNode("url", "https://github.com/nrgxnat/xnat-openid-auth-plugin")
                    appendNode("connection", "scm:https://github.com/nrgxnat/xnat-openid-auth-plugin")
                    appendNode("developerConnection", "scm:git@github.com:nrgxnat/xnat-openid-auth-plugin.git")
                }

                root.appendNode("licenses").appendNode("license").with {
                    appendNode("name", "Simplified BSD 2-Clause License")
                    appendNode("url", "https://xnat.org/about/license.php")
                    appendNode("distribution", "repo")
                }

                root.appendNode("developers").with {
                    appendNode("developer").with {
                        appendNode("id", "abrazzatti")
                        appendNode("name", "Andrew Brazzatti")
                        appendNode("email", "andrew@redboxresearchdata.com.au")
                    }
                    appendNode("developer").with {
                        appendNode("id", "hkodden")
                        appendNode("name", "Harry Kodden")
                        appendNode("email", "harry@e-tunity.nl")
                    }
                    appendNode("developer").with {
                        appendNode("id", "rherrick")
                        appendNode("name", "Rick Herrick")
                        appendNode("email", "jrherrick@wustl.edu")
                    }
                    appendNode("developer").with {
                        appendNode("id", "shilob")
                        appendNode("name", "Shilo B")
                        appendNode("email", "shiloworks@gmail.com")
                    }
                    appendNode("developer").with {
                        appendNode("id", "wcho")
                        appendNode("name", "Woonchan Cho")
                        appendNode("email", "wcho24@wustl.edu")
                    }
                }
            }
        }
    }
    repositories {
        maven {
            name = "XNAT_Artifactory"
            url = project.version.toString().endsWith("-SNAPSHOT")
                ? "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot-local"
                : "https://nrgxnat.jfrog.io/nrgxnat/libs-release-local"
            // CI injects ORG_GRADLE_PROJECT_artifactoryUser/Token env vars (Gradle maps
            // these to project properties). Local devs can set artifactoryUser/Token in
            // ~/.gradle/gradle.properties. Mirrors monorepo's buildSrc convention.
            credentials {
                username = (project.findProperty("artifactoryUser")  ?: System.getenv("ARTIFACTORY_USER"))  ?: ""
                password = (project.findProperty("artifactoryToken") ?: System.getenv("ARTIFACTORY_TOKEN")) ?: ""
            }
        }
    }
}

